test/runnable/record.crow
import
	crow/io/print: out, print

main nat^(_ string[]) summon
	m my-record = 1, 2
	assert m.x == 1
	assert m.y == 2
	out print "{m x} {m y}"
	()

my-record record
	x nat
	y nat
