test/compile-errors/destructure-non-tuple.crow
main nat^(_ string[])
	(x, y) = 1
	x,
